fix: restrict channel detail to active channels and remove pricing N+1